rewrite to use java.net.http.HttpClient